# solana-based-charity-application

./: build-command.txt
Website/solana-based-charity-application/muzahir-fyp/: package-lock.json  package.json
Website/solana-based-charity-application/muzahir-fyp/backend/: app.js  package.json  readme.txt  tsconfig.json
Website/solana-based-charity-application/muzahir-fyp/backend/config/: config.json
Website/solana-based-charity-application/muzahir-fyp/backend/controllers/: AccountController.js  UserContoller.js  index.js
Website/solana-based-charity-application/muzahir-fyp/backend/migrations/: 20211218233017-create-user-table.js  20211218233235-create-account-table.js  20211218233254-create-history-table.js  20211230103328-add-account-id-user.js
Website/solana-based-charity-application/muzahir-fyp/backend/models/: account.js  user.js  userAccount.js
Website/solana-based-charity-application/muzahir-fyp/backend/routes/: index.js
Website/solana-based-charity-application/muzahir-fyp/backend/solana/: solana.d.ts  solana.js  solana.ts  solana_transfers.d.ts  solana_transfers.js  solana_transfers.ts  utils.d.ts  utils.js  utils.ts
Website/solana-based-charity-application/muzahir-fyp/frontend/src/: index.js  routes.js
transfer-lamports/: package-lock.json  package.json  tsconfig.json
transfer-lamports/src/client/: main.ts  solana_transfers.ts
transfer-lamports/src/program-rust/: Cargo.toml
transfer-lamports/src/program-rust/src/: processor.rs
transfer-lamports/src/program-rust/tests/: functional.rs
(+9 files in other folders)
